# HSE-Course

module-1/homework/BigInteger/: CMakeLists.txt  biginteger.cpp
module-1/homework/Builder/: CMakeLists.txt  main.cpp
module-1/homework/Constructor/: main.cpp
module-1/homework/List/: CMakeLists.txt  list.cpp  list.h
module-1/homework/TypeList/typelist/: append.h  erase.h  eraseall.h  indexof.h  length.h  noduplicates.h  replace.h  typeat.h  typelist.h
